Fix story list icon alignment

--- a/src/parts/story-list-item/story-list-item.scss
+++ b/src/parts/story-list-item/story-list-item.scss
@@ -23,7 +23,6 @@ story-list-item {
 
   .item h2 .icon {
     font-size: 0.8em;
-    vertical-align: middle;
     margin: -2px 3px 0 0;
   }
 
